<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/main_screen_description"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="13dp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#135554"
                android:text="@string/menu_1"
                android:id="@+id/offline"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0055ff"
                android:text="@string/menu_2"
                android:id="@+id/online"
                />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>