<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Game"
    android:background="@drawable/background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:background="#00ff77"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/player_1"
                        android:id="@+id/playerO"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="#ff0000"
                        android:text=""
                        android:id="@+id/player_1_text"
                        />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/circle"
                        android:contentDescription="@string/circle" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
                android:gravity="center">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:background="@color/design_default_color_error"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/player_2"
                    android:id="@+id/playerX"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#00ff00"
                    android:text=""
                    android:id="@+id/player_2_text"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_outline_superscript_24"
                    android:contentDescription="@string/x" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:id="@+id/board"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="00"
                android:id="@+id/p00"
                android:orientation="horizontal"
                tools:ignore="NestedWeights,UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="01"
                android:id="@+id/p01"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="02"
                android:id="@+id/p02"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="10"
                android:id="@+id/p10"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="11"
                android:id="@+id/p11"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="12"
                android:id="@+id/p12"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="20"
                android:id="@+id/p20"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="21"
                android:id="@+id/p21"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:tag="22"
                android:id="@+id/p22"
                android:orientation="horizontal"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>